--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -76,7 +76,7 @@ body[a="light"] { @include light-appearance; }
 html { height: 100%; }
 
 body {
-  font-family: "Noto Serif", monospace, Roboto, sans-serif;
+  font-family: monospace, Roboto, sans-serif;
   font-size: 0.9em;
   line-height: 1.4;
   margin: 0;
