--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -57,7 +57,7 @@
 }
 
 @mixin light-appearance {
-  @include theme(#ffffff, #000000, #595959, #3548cf, #8f0075, #dae5ec); // modus-operandi
+  @include theme(#f5f5f5, #000000, #595959, #3548cf, #8f0075, #dae5ec); // modus-operandi
 }
 
 body[a="dark"] { @include dark-appearance; }
@@ -76,9 +76,9 @@ body[a="light"] { @include light-appearance; }
 html { height: 100%; }
 
 body {
-  font-family: monospace, Roboto, sans-serif;
-  font-size: 0.9em;
-  line-height: 1.4;
+  font-family: "Lato", "Noto Serif", Georgia;
+  font-size: 1rem;
+  line-height: 1.5;
   margin: 0;
   min-height: 100%;
   overflow-wrap: break-word;
@@ -86,7 +86,7 @@ body {
 
 h2, h3, h4, h5, h6 { margin-top: 1.5rem; }
 
-p { margin: 1rem 0; }
+p { margin: 1.5rem 0; }
 
 li { margin: 0.4rem 0; }
 
